# SMDIR

./: .gitignore  README.md  draft.ipynb  pyproject.toml
smdir/: __init__.py  datareader.py  lib_types.py  maintainer.py  metadata_reader.py  utils.py
smdir/cfi/: common.py  institute_list.py  institute_property.py
smdir/codal/: common.py  publisher_info.py  publisher_list.py  publisher_report_list.py  report_list.py
smdir/conf/: default_settings.yaml
smdir/fipiran/: common.py  fund.py  fund_list.py
smdir/ifb/: __init__.py  datareader.py  scraper.py
smdir/ifb/metadata/: list_columns.yaml  page_columns.yaml
smdir/metadata/: security_aliases.yaml
smdir/tsetmc/: __init__.py  codal_publisher_info.py  common.py  daily_closing_price.py  datareader.py  market_watch.py  security_identity.py  shareholders.py
smdir/tsetmc/metadata/: ifb_ins_codes.yaml
